...
                    value = query,
                    onValueChange = {
                        query = it
                        onSearch(it)
                    },
                    modifier = Modifier.fillMaxWidth(),
                    label = { Text("Search your exercises") },
                    singleLine = true,
                )
                Spacer(modifier = Modifier.height(10.dp))
                Text(
                    text = NumberFormat.getIntegerInstance().format(exercises.size) +
                        if (exercises.size == 1) " exercise" else " exercises",
...
